# benchmark

./: .gitignore  LICENSE  README.md  config.yaml  db.json  pyproject.toml  setup.py
deephyper_benchmark/: __init__.py  core.py
deephyper_benchmark/integration/: keras.py  optuna.py  torch.py
deephyper_benchmark/search/: __init__.py  _cobyqa.py  _de_automl.py  _mpi_doptuna.py  _pybobyqa.py  _smac.py
deephyper_benchmark/stopper/: lcpfn.py
deephyper_benchmark/utils/: json_utils.py
examples/: bench_ackley.py  bench_branin.py  bench_combo.py  bench_dtlz.py
examples/cbbo_runner/: cbbo.toml
lib/C-BBO/: README.md
lib/C-BBO/ackley/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/branin/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/cossin/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/easom/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/griewank/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/hartmann6D/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/levy/: benchmark.py  hpo.py  metrics.py
lib/C-BBO/michal/: hpo.py  (+2 more)
lib/DTLZ/: README.md  benchmark.py  dtlz.py  hpo.py  metrics.py  model.py
lib/FNOBench/: README.md  benchmark.py  hpo.py  model.py  requirements.txt
lib/HPOBench/: README.md
lib/IPL/: README.md  benchmark.py  hpo.py
lib/JAHSBench/: README.md  REQUIREMENTS.txt  benchmark.py  hpo.py  install.sh  metrics.py  model.py
lib/LCBench/: Makefile  README.md  __init__.py  benchmark.py  hpo.py
lib/PINNBench/: README.md  context.yaml  plot.py  test.py
lib/YAHPO/: README.md
src/analytics/: analyse_db.py
src/deephyper_benchmark/: __init__.py  _benchmark.py  _scorer.py  benchmark.py  cli.py  utils.py
tests/: test_c_bbo.py  test_cbbo.py  test_dtlz.py
(+181 files in other folders)
