[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deephyper-benchmark"
version = "0.0.2"
dependencies = [
    "deephyper>=0.9.3",
]
requires-python = ">=3.10"
authors = [
    { name = "Romain Egele", email = "regele@ornl.gov" },
]
maintainers = [
    { name = "Romain Egele", email = "regele@ornl.gov" },
]
description = "Benchmarks for the DeepHyper package"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Documentation = "http://deephyper.readthedocs.io"
Changes = "https://github.com/deephyper/deephyper/releases"
Forum = "https://github.com/deephyper/deephyper/discussions"
GitHub = "https://github.com/deephyper/deephyper"
Issues = "https://github.com/deephyper/deephyper/issues"

[tool.coverage.paths]
source = ["src/", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deephyper"]

[tool.coverage.report]
exclude_lines = ["if __name__ == '__main__':"]

[tool.pytest.ini_options]
norecursedirs = ".git"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["D", "E501"]
ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
